fixing the image not showing bug

--- a/src/index.css
+++ b/src/index.css
@@ -6,16 +6,3 @@
 *{
   font-family: 'Rubik', sans-serif;
 }
-
-/* 
-.hero{
-  background-color: hsl(223, 19%, 93%);
-}
-
-.test{
-  background-color: hsl(228, 33%, 97%);
-} */
-
-.img1{
-  background-image: url("https://res.cloudinary.com/dnrkey0cf/image/upload/v1704398053/aup3xcpqwvtqwqbeilqp.png");
-}
